--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<canvas id="demo-canvas"></canvas>
 					<h1 class="main-title">
 						<p>Hello, I'm <span id="name">Stefan Karaferovic</span>.</p>
-						<p>I'm a front-end web developer.</p>
+						<p>I'm a full stack web developer.</p>
 						<!-- mozda ne about nego projects -->
 						<button id="headerBtn">
 							View my work <i id="arrow" class="fas fa-arrow-right"></i>
