--- a/index.html
+++ b/index.html
@@ -246,6 +246,87 @@
 							</p>
 						</div>
 						<div
+							data-aos="fade-left"
+							data-aos-duration="850"
+							data-aos-easing="ease-in-out"
+							data-aos-once="true"
+							class="project"
+						>
+							<div class="project-image">
+								<a
+									class="image"
+									href="https://sneakers-shop-next-js.vercel.app/"
+									target="_blank"
+								>
+									<img
+										src="./gifs/sneakersShop.png"
+										alt="sneakers shop screenshot"
+								/></a>
+							</div>
+							<div class="project-desc">
+								<h2 class="header">Sneakers Shop</h2>
+								<p class="about">
+									Next.js sneakers shop website. <br />
+									<br />
+									Features: search sneakers, filter/sort sneakers, user
+									registration and authentification, adding products to cart,
+									creating orders etc.
+								</p>
+								<div class="links">
+									<a
+										href="https://sneakers-shop-next-js.vercel.app/"
+										target="_blank"
+										><button>Visit website</button></a
+									>
+									<a
+										href="https://github.com/stefank-29/SneakersShop-Next.js"
+										target="_blank"
+										><button>
+											<i id="logo" class="fab fa-github"></i> &nbsp;View
+											source code
+										</button></a
+									>
+								</div>
+							</div>
+						</div>
+						<div
+							data-aos="fade-right"
+							data-aos-duration="850"
+							data-aos-easing="ease-in-out"
+							data-aos-once="true"
+							class="project"
+						>
+							<div class="project-image">
+								<a
+									class="image"
+									href="https://github.com/stefank-29/AirTicketsApp"
+									target="_blank"
+								>
+									<img src="./gifs/airtickets.png" alt="airtickets screenshot"
+								/></a>
+							</div>
+							<div class="project-desc">
+								<h2 class="header">Air Tickets App</h2>
+								<p class="about">
+									Microservice application that is used for buying airline
+									tickets, adding flights, cancelling flights, cancelling tickets,
+									updating account, verifying account etc. <br />
+									<br />Built with Node.js on backend and HTML/CSS and vanilla JS
+									on frontend.<br /><br />
+								</p>
+								<div class="links">
+									<a
+										href="https://github.com/stefank-29/AirTicketsApp"
+										target="_blank"
+										><button>
+											<i id="logo" class="fab fa-github"></i> &nbsp;View
+											source code
+										</button></a
+									>
+								</div>
+							</div>
+						</div>
+						<div
 							data-aos="fade-right"
 							data-aos-duration="850"
 							data-aos-easing="ease-in-out"
@@ -348,33 +429,70 @@
 							<div class="project-image">
 								<a
 									class="image"
-									href="https://stefank-29.github.io/Tic-Tac-Toe/"
+									href="https://github.com/stefank-29/BlogApp-Django"
 									target="_blank"
 								>
-									<img src="./gifs/tic-tac-toe1.png" alt="tic tac toe screenshot"
+									<img src="./gifs/blogapp.png" alt="blog app screenshot"
 								/></a>
 							</div>
 							<div class="project-desc">
-								<h2 class="header">Tic-Tac-Toe</h2>
+								<h2 class="header">Blog app</h2>
 								<p class="about">
-									Tic Tac Toe game built for assignment as part of the curriculum
-									for the JavaScript course on The Odin Project. <br />
-									<br />It can be played in two modes: <br />
-									<i class="fas fa-circle list-dot"></i
-									><strong> Single-player</strong> (vs AI player implemented with
-									Minimax Algorithm) <br />
-									<i class="fas fa-circle list-dot"></i>
-									<strong>Multiplayer</strong> (vs another player)<br /><br />
-									Built with: JavaScript, HTML5, CSS3 & Git.
+									Blog app build with JavaScript on frontend and Django on
+									backend. <br />
+									<br />
+									Features are user registration and authentication, adding posts,
+									updating/deleting post, commenting posts etc. <br />
 								</p>
 								<div class="links">
 									<a
-										href="https://stefank-29.github.io/Tic-Tac-Toe/"
+										href="https://github.com/stefank-29/BlogApp-Django"
+										target="_blank"
+										><button>
+											<i id="logo" class="fab fa-github"></i> &nbsp;View
+											source code
+										</button></a
+									>
+								</div>
+							</div>
+						</div>
+						<div
+							data-aos="fade-left"
+							data-aos-duration="850"
+							data-aos-easing="ease-in-out"
+							data-aos-once="true"
+							class="project"
+						>
+							<div class="project-image">
+								<a
+									class="image"
+									href="https://movie-reviews-website.herokuapp.com/"
+									target="_blank"
+								>
+									<img
+										src="./gifs/moviereviews.png"
+										alt="movie reviews screenshot"
+								/></a>
+							</div>
+							<div class="project-desc">
+								<h2 class="header">Movie reviews</h2>
+								<p class="about">
+									Node.js/Vue.js website with database of information related to
+									movies, television programs and shows.<br />
+									<br />
+									Features: adding movies, updating/deleting movies, user
+									registration and authentification, submiting reviews for movies,
+									updating user info etc.
+									<br />
+								</p>
+								<div class="links">
+									<a
+										href="https://movie-reviews-website.herokuapp.com/"
 										target="_blank"
 										><button>Visit website</button></a
 									>
 									<a
-										href="https://github.com/stefank-29/Tic-Tac-Toe"
+										href="https://github.com/stefank-29/Movie-Reviews"
 										target="_blank"
 										><button>
 											<i id="logo" class="fab fa-github"></i> &nbsp;View
@@ -430,105 +548,6 @@
 									<a
 										href="https://github.com/stefank-29/ETCH-A-SKETCH"
 										target="_blank"
-										><button>
-											<i id="logo" class="fab fa-github"></i> &nbsp;View
-											source code
-										</button></a
-									>
-								</div>
-							</div>
-						</div>
-						<div
-							data-aos="fade-right"
-							data-aos-duration="850"
-							data-aos-easing="ease-in-out"
-							data-aos-once="true"
-							class="project"
-						>
-							<div class="project-image">
-								<a
-									class="image"
-									href="https://stefank-29.github.io/Calculator/"
-									target="_blank"
-								>
-									<img src="./gifs/calculator.png" alt="calculator screenshot"
-								/></a>
-							</div>
-							<div class="project-desc">
-								<h2 class="header">Calculator</h2>
-								<p class="about">
-									An online Calculator built for assignment as part of the
-									curriculum for the Web Development 101 course on The Odin
-									Project. <br />
-									<br />
-									Built with: <br />
-									<i class="fas fa-circle list-dot"></i>
-									<strong>JavaScript</strong> <br /><i
-										class="fas fa-circle list-dot"
-									></i>
-									<strong>CSS3</strong><br />
-									<i class="fas fa-circle list-dot"></i>
-									<strong>HTML5</strong> <br />
-									<i class="fas fa-circle list-dot"></i>
-									<strong>Git</strong> <br />
-									<br />
-								</p>
-								<div class="links">
-									<a
-										href="https://stefank-29.github.io/Calculator/"
-										target="_blank"
-										><button>Visit website</button></a
-									>
-									<a
-										href="https://github.com/stefank-29/Calculator"
-										target="_blank"
-										><button>
-											<i id="logo" class="fab fa-github"></i> &nbsp;View
-											source code
-										</button></a
-									>
-								</div>
-							</div>
-						</div>
-						<div
-							data-aos="fade-left"
-							data-aos-duration="850"
-							data-aos-easing="ease-in-out"
-							data-aos-once="true"
-							class="project"
-						>
-							<div class="project-image">
-								<a
-									class="image"
-									href="https://stefank-29.github.io/Library/"
-									target="_blank"
-								>
-									<img src="./gifs/library.png" alt="calculator screenshot"
-								/></a>
-							</div>
-							<div class="project-desc">
-								<h2 class="header">Library</h2>
-								<p class="about">
-									Library app to store books that you read or want to read<br />
-									<br />
-									Features: <br />
-									<i class="fas fa-circle list-dot"></i>
-									<strong>Add new book to library</strong> <br /><i
-										class="fas fa-circle list-dot"
-									></i>
-									<strong>Remove book</strong><br />
-									<i class="fas fa-circle list-dot"></i>
-									<strong>Toggle read status</strong> <br />
-									<i class="fas fa-circle list-dot"></i>
-									<strong>Sort books by name or read status </strong> <br />
-									<br />
-									Built with: JavaScript, CSS3, HTML5 & Git.
-								</p>
-								<div class="links">
-									<a href="https://stefank-29.github.io/Library/" target="_blank"
-										><button>Visit website</button></a
-									>
-									<a href="https://github.com/stefank-29/Library" target="_blank"
 										><button>
 											<i id="logo" class="fab fa-github"></i> &nbsp;View
 											source code
